Addedd approx. 80 percent of Week-View

--- a/index.html
+++ b/index.html
@@ -493,11 +493,116 @@
 			
 				
 			</div>
-			<div id="week">
-
+			<div id="week" class="tab-pane">
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th>Time</th>
+							<th>03.12.</th>
+							<th>04.12.</th>
+							<th>05.12.</th>
+							<th>06.12.</th>
+							<th>07.12.</th>
+							<th>08.12.</th>
+							<th>09.12.</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>00:00</td>
+							<td class="show-grid" style="padding:0px">
+								<div class="span2" style="width:100%;margin-left:0px;border-radius:0px;line-height:20px">
+									<div style="width:50%;float:left">
+										+
+									</div>
+									<div style="width:50%;float:left">
+										1
+									</div>
+									&euro;500
+								</div>
+							</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+						</tr>
+						<tr>
+							<td>00:30</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+						</tr>
+						<tr>
+							<td>01:00</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+						</tr>
+						<tr>
+							<td>01:30</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+						</tr>
+						<tr>
+							<td>02:00</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+						</tr>
+						<tr>
+							<td>02:30</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+						</tr>
+						<tr>
+							<td>03:00</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+						</tr>
+						<tr>
+							<td>03:30</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+							<td>---</td>
+						</tr>
+					</tbody>
+				</table>
+				<img src="img/tu_fp/week_view_graph.png">
 			</div>
 			<div id="day">
-
 			</div>
 		</div>
 	</div>
