--- a/index.html
+++ b/index.html
@@ -622,7 +622,12 @@
 	</div>
 	
 	<div class="container" id="tu_fp_search_content" style="display:none">
-		<h2 id="tu_fp_search_content_term">Search term:</h2>
+		<div style="width:80%;float:left">
+			<h2 id="tu_fp_search_content_term">Search term:</h2>
+		</div>
+		<div style="float:right">
+			<img src="img/tu_fp/home_content_current_money_status.png">
+		</div>
 	</div>
 
 	<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
