--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Bootstrap, from Twitter</title>
+	<title>TU Finance Planner</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -42,7 +42,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</a>
-				<a class="brand" href="#">TU Finance Planner</a>
+				<a class="brand" href="index.html">TU Finance Planner</a>
 				
 				<div class="nav-collapse collapse">
 					<ul class="nav">
@@ -51,9 +51,9 @@
 						<li><a href="#tu_fp_preferences_content" onClick="hideShowDiv('tu_fp_search_content','tu_fp_global_container')" data-toggle="tab">Preferences</a></li>
 					</ul>
 				</div><!--/.nav-collapse -->
-				<form class="navbar-search pull-right">
+				<div class="navbar-search pull-right">
 					<input type="text" id="search" class="search-query" placeholder="Search" onkeypress="openSearch(event,'tu_fp_global_container','tu_fp_search_content','search','tu_fp_search_content_term')">
-				</form>
+				</div>
 			</div>
 		</div>
 	</div>
