--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<div class="show-grid" style="margin:0px">
 									<div class="span2" style="margin:5px;width:120px">
 										<div style="width:50%;float:left">
-											+
+											<a href="#newRecord" data-toggle="modal">++</a>
 										</div>
 										<div style="width:50%;float:left">
 											1
@@ -796,6 +796,20 @@
 			<img src="img/tu_fp/home_content_current_money_status.png">
 		</div>
 	</div>
+	
+	<div id="newRecord" class="modal hide fade">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>Modal header</h3>
+  </div>
+  <div class="modal-body">
+    <p>One fine body…</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn">Close</a>
+    <a href="#" class="btn btn-primary">Save changes</a>
+  </div>
+</div>
 
 	<script src="js/DataTables-1.9.4/media/js/jquery.js"></script>
 	<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
