--- a/index.html
+++ b/index.html
@@ -610,7 +610,93 @@
 						</table>
 						<img src="img/tu_fp/week_view_graph.png">
 					</div>
-					<div id="day">
+					<div id="day" class="tab-pane">
+						<table class="table table-bordered">
+							<thead>
+								<tr>
+									<th class="span1" > Time</th>
+									<th style="width:100%;text-align:center"> Mo, 03. Dezember 2012</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>08:00</td>
+									<td class="show-grid" style="padding:0px">
+										<div class="span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left">
+											     +    -150 &euro;, Toner Rainbow Kit for Samsung CLX-3175 Printer  
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>08:30</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>09:00</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>09:30</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>10:00</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>10:30</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>11:00</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>11:30</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>12:00</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>12:30</td>
+									<td> </td>
+								</tr>
+									<tr>
+									<td>13:00</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>13:30</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>14:00</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>14:30</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>15:00</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>15:30</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>16:00</td>
+									<td> </td>
+								</tr>
+								<tr>
+									<td>16:30</td>
+									<td> </td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</div>
 			</div>
