--- a/index.html
+++ b/index.html
@@ -711,6 +711,62 @@
 		
 			<div class="tab-pane" id="tu_fp_evaluation_content">
 				<div class="container" style="width:100%;padding:0;margin:0">
+					<form class="form-horizontal">
+						<div class="row">
+							<div class="control-group" style="float:left">
+								<label class="control-label" for="category">Category:</label>
+								<div class="controls">
+									<select name="category" id="chooseable" style="float:left">
+										<option>All</option>
+										<option>Income</option>
+										<option>Rent</option>
+										<option>Car</option>
+										<option>Energy</option>
+										<option>Insurances</option>
+									</select>
+								</div>
+							</div>
+							<div class="control-group" style="float:left">
+								<div class="control-group" style="float:left">
+									<div class="controls">
+										<input type="radio" name="rgrpp" id="statistics_radio_month" value="month" checked="checked">Month</input>
+									</div>
+									<div class="controls">
+										<input type="radio" name="rgrpp" id="statistics_radio_quarter" value="quarter">Quarter</input>
+									</div>
+									<div class="controls">
+										<input type="radio" name="rgrpp" id="statistics_radio_year" value="year">Year</input>
+									</div>
+								</div>
+							</div>
+							<div class="control-group" style="float:left">
+								<div class="controls" style="float:left">
+									<select name="statistics_year" id="chooseable" style="float:left">
+										<option>2012</option>
+										<option>2011</option>
+										<option>2010</option>
+										<option>2009</option>
+										<option>2008</option>
+										<option>2007</option>
+									</select>
+									<select name="statistics_month" id="chooseable" style="float:left">
+										<option>January</option>
+										<option>February</option>
+										<option>March</option>
+										<option>April</option>
+										<option>May</option>
+										<option>June</option>
+										<option>July</option>
+										<option>August</option>
+										<option>September</option>
+										<option>October</option>
+										<option>November</option>
+										<option>December</option>
+									</select>
+								</div>
+							</div>
+						</div>
+					</form>
 					<div style="float:left;background-color:#000000;width:3px;height:430px;margin:0;padding:0"></div>
 					<div style="width:90%;float:left;margin:0;padding:0">
 						<div class="span2" style="width:100%;height:430px;margin:0;padding:0">
@@ -1039,7 +1095,7 @@
 								<option>Car</option>
 								<option>Energy</option>
 							</select>
-							<a href="#" data-toggle="collapse" data-target="#categoryDiv">Plus</a>
+							<a href="#" data-toggle="collapse" data-target="#categoryDiv"><img class="plusBild" src="img/add.png"></a>
 						</div>
 					</div>
   
