Added Jquery-UI plugin

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link href="css/docs.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/DT_bootstrap.css" type="text/css" rel="stylesheet">
+	<link href="css/jquery-ui-1.9.2.custom.css" rel="stylesheet">
 
 	<style>
 	body {
@@ -1185,7 +1186,7 @@
 
 	
 
-
+<script src="js/jquery-ui-1.9.2.custom.js"></script>
 <script src="js/DataTables-1.9.4/media/js/jquery.js"></script>
 <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 <script src="js/bootstrap-transition.js"></script>
