--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/DT_bootstrap.css" type="text/css" rel="stylesheet">
 	<link href="css/jquery-ui-1.9.2.custom.css" rel="stylesheet">
-
+	
 	<style>
 	body {
 		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -1185,7 +1185,7 @@
 </div>
 
 	
-
+<script src="js/jquery.js"></script>
 <script src="js/jquery-ui-1.9.2.custom.js"></script>
 <script src="js/DataTables-1.9.4/media/js/jquery.js"></script>
 <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
