Added Colopicker and changed all capital letters to lowercase

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/DT_bootstrap.css" type="text/css" rel="stylesheet">
 	<link href="css/jquery-ui-1.9.2.custom.css" rel="stylesheet">
+	<link href="css/colorpicker.css" rel="stylesheet" >
 	
 	<style>
 	body {
@@ -1111,7 +1112,7 @@
 						<div class="control-group">
 							<label class="control-label" for="inputColor">Color:</label>
 							<div class="controls">
-								TODO: color
+								<p id="colorpickerHolder"></p>
 							</div>
 						</div>    
 						<div class="control-group">
@@ -1208,6 +1209,12 @@
 <script type="text/javascript" charset="utf-8" language="javascript" src="js/DataTables-1.9.4/media/js/jquery.dataTables.js"></script>
 <script type="text/javascript" charset="utf-8" language="javascript" src="js/DataTables-1.9.4/media/js/DT_bootstrap.js"></script>
 <script src="js/application.js"></script>
+
+<script src="js/colorpicker.js"></script>
+<script type="text/javascript" src="js/eye.js"></script>
+<script type="text/javascript" src="js/utils.js"></script>
+<script type="text/javascript" src="js/layout.js?ver=1.0.2"></script>
+
 <script src="js/tu_fp/tu_fp.js"></script>
 
 </body>
