--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,14 @@
 						<div class="control-group">
 							<label class="control-label" for="inputColor">Color:</label>
 							<div class="controls">
-								<p id="colorpickerHolder"></p>
+								<div id="chosenColor" class="well well-small" style="padding:0px;float:left;width:60px;margin-right:30px;"></div>
+								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:red;width:20px;;border:1px solid;"></div>
+								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:green;width:20px;;border:1px solid;"></div>
+								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:blue;width:20px;;border:1px solid;"></div>
+								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:yellow;width:20px;;border:1px solid;"></div>
+								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:gray;width:20px;;border:1px solid;"></div>
+								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:magenta;width:20px;;border:1px solid;"></div>
+								<a href="#" id="colorSelector">more ...</a>
 							</div>
 						</div>    
 						<div class="control-group">
