Finished colorpicker component

--- a/index.html
+++ b/index.html
@@ -1116,13 +1116,14 @@
 							<label class="control-label" for="inputColor">Color:</label>
 							<div class="controls">
 								<div id="chosenColor" class="well well-small" style="padding:0px;float:left;width:60px;margin-right:30px;"></div>
-								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:red;width:20px;;border:1px solid;"></div>
-								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:green;width:20px;;border:1px solid;"></div>
-								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:blue;width:20px;;border:1px solid;"></div>
-								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:yellow;width:20px;;border:1px solid;"></div>
-								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:gray;width:20px;;border:1px solid;"></div>
-								<div class="well well-small" style="padding:0px;float:left;margin-right:10px;background-color:magenta;width:20px;;border:1px solid;"></div>
-								<a href="#" id="colorSelector">more ...</a>
+								<div class="well well-small fixedColor" style="padding:0px;float:left;margin-right:10px;background-color:red;width:20px;;border:1px solid;"></div>
+								<div class="well well-small fixedColor" style="padding:0px;float:left;margin-right:10px;background-color:green;width:20px;;border:1px solid;"></div>
+								<div class="well well-small fixedColor" style="padding:0px;float:left;margin-right:10px;background-color:blue;width:20px;;border:1px solid;"></div>
+								<div class="well well-small fixedColor" style="padding:0px;float:left;margin-right:10px;background-color:yellow;width:20px;;border:1px solid;"></div>
+								<div class="well well-small fixedColor" style="padding:0px;float:left;margin-right:10px;background-color:gray;width:20px;;border:1px solid;"></div>
+								<div class="well well-small fixedColor" style="padding:0px;float:left;margin-right:10px;background-color:magenta;width:20px;;border:1px solid;"></div>
+								<a href="#" data-toggle="collapse" data-target="#colorChooserDiv">more ...</a>
+								<div id="colorChooserDiv" class="collapse"></div>
 							</div>
 						</div>    
 						<div class="control-group">
